Add more cron schedules to daily_streak.yml
Added additional cron schedules for daily streak workflow.

--- a/.github/workflows/daily_streak.yml
+++ b/.github/workflows/daily_streak.yml
@@ -10,6 +10,10 @@ on:
     - cron: '0 3 * * *'    # 9:00 AM BDT
     - cron: '0 8 * * *'    # 2:00 PM BDT
     - cron: '0 12 * * *'   # 6:00 PM BDT
+    - cron: '0 9 * * *'
+    - cron: '15 9 * * *'
+    - cron: '45 9 * * *'
+    - cron: '0 10 * * *'
   workflow_dispatch:
 
 jobs:
